pre-loader z-index bug fixed

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   width: 100%;
   background-color: #f9f8f8;
   position: fixed;
-  z-index: 1;
+  z-index: 999;
   display: grid;
 }
 
